--- a/Aplication/index.html
+++ b/Aplication/index.html
@@ -46,24 +46,8 @@
                   <li class="active">
                     <a href="index.html">Home</a>
                   </li>
-                  <li><a href="dj.html">Login</a></li>
-                  <li class="has-children">
-                    <a href="shows.html">Shows</a>
-                    <ul class="dropdown arrow-top">
-                      <li><a href="#">Top 20 of The Week</a></li>
-                      <li><a href="#">Featured Artist</a></li>
-                      <li><a href="#">Interviews</a></li>
-                      <li class="has-children">
-                        <a href="#">Sub Menu</a>
-                        <ul class="dropdown">
-                          <li><a href="#">Menu One</a></li>
-                          <li><a href="#">Menu Two</a></li>
-                          <li><a href="#">Menu Three</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li><a href="events.html">Events</a></li>
+                  <li><a href="login.html">Login</a></li>
+                  <li><a href="acesso.html">Acesso</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
