--- a/Aplication/acesso.html
+++ b/Aplication/acesso.html
@@ -35,7 +35,7 @@
         <div class="container py-1">
           <div class="row align-items-center">
             <div class="col-8 col-md-8 col-lg-4">
-              <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><strong>RAÇA <br>AMOR & <br>PAIXÃO<span class="text-primary">.</span></strong></a></h1>
+              <!--<h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><strong>RAÇA <br>AMOR & <br>PAIXÃO<span class="text-primary">.</span></strong></a></h1>-->
             </div>
             <div class="col-4 col-md-4 col-lg-8">
               <nav class="site-navigation text-right text-md-right" role="navigation">
@@ -73,7 +73,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="mb-4">RAÇA AMOR <span class="text-red">&</span>PAIXÃO</h1>
+            <h1 class="mb-4" style="color: white" class="mb-4">RAÇA AMOR <span class="mb-4" style="color: red" class="mb-4"><br>&</span> <span class="mb-4" style="color: white" class="mb-4">PAIXÃO.</span>
             
           </div>
         </div>
