--- a/Aplication/acesso.html
+++ b/Aplication/acesso.html
@@ -34,9 +34,7 @@
     <div class="site-navbar mt-4">
         <div class="container py-1">
           <div class="row align-items-center">
-            <div class="col-8 col-md-8 col-lg-4">
-              <!--<h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><strong>RAÇA <br>AMOR & <br>PAIXÃO<span class="text-primary">.</span></strong></a></h1>-->
-            </div>
+          
             <div class="col-4 col-md-4 col-lg-8">
               <nav class="site-navigation text-right text-md-right" role="navigation">
 
@@ -48,8 +46,7 @@
                   </li>
                   <li><a href="login.html">Login</a></li>
                   <li><a href="acesso.html">Acesso</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="videos.html">Videos</a></li>
                 </ul>
               </nav>
             </div>
