--- a/Aplication/login.html
+++ b/Aplication/login.html
@@ -105,7 +105,7 @@
         <div class="container py-1">
           <div class="row align-items-center">
             
-            <div class="col-4 col-md-4 col-lg-8">
+            <div class="col-12 col-md-4 col-lg-8">
               <nav class="site-navigation text-right text-md-right" role="navigation">
 
                 <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
@@ -114,11 +114,10 @@
                   <li class="active">
                     <a href="index.html">Home</a>
                   </li>
-                  <li><a href="dj.html">Login</a></li>
+                  <li><a href="login.html">Login</a></li>
                   
-                  <li><a href="events.html">Events</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="acesso.html">Acesso</a></li>
+                  <li><a href="videos.html">Videos</a></li>
                 </ul>
               </nav>
             </div>
