--- a/Aplication/login.html
+++ b/Aplication/login.html
@@ -148,33 +148,33 @@
               <form action="/examples/actions/confirmation.php" method="post">
                   		
                   <div class="text-center social-btn">
-                      <a href="#" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>
-                      <a href="#" class="btn btn-info btn-block"><i class="fa fa-twitter"></i> Sign in with <b>Twitter</b></a>
-                <a href="#" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a>
+                      <a href="https://www.facebook.com/" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Entre via <b>Facebook</b></a>
+                      <a href="https://www.instagram.com/?hl=pt-br" class="btn btn-info btn-block"><i class="fa fa-instagram"></i> Entre via <b>Intagran</b></a>
+                <a href="https://accounts.google.com/signin/v2/identifier?hl=pt-BR&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Entre via <b>Google</b></a>
                   </div>
-              <div class="or-seperator"><i>or</i></div>
+              <div class="or-seperator"><i>ou</i></div>
                   <div class="form-group">
                     <div class="input-group">
                           <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                          <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+                          <input type="text" class="form-control" name="username" placeholder="Usuario" required="required">
                       </div>
                   </div>
               <div class="form-group">
                       <div class="input-group">
                           <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                          <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+                          <input type="password" class="form-control" name="password" placeholder="Senha" required="required">
                       </div>
                   </div>        
                   <div class="form-group">
-                      <button type="submit" class="btn btn-success btn-block login-btn">Sign in</button>
+                      <a href="videos.html" type="submit  " class="btn btn-success btn-block login-btn">Sign in</a>
                   </div>
                   <div class="clearfix">
                       <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
-                      <a href="#" class="pull-right text-success">Forgot Password?</a>
+                      <!--<a href="#" class="pull-right text-success">Forgot Password?</a>-->
                   </div>  
                   
               </form>
-              <div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
+              <div class="hint-text small">Don't have an account? <a href="https://www.nrnoficial.com.br/?gclid=EAIaIQobChMI5bi22Yqq5QIVEwaRCh31zgYqEAAYASAAEgIE1fD_BwE#!/home" class="text-success">Register Now!</a></div>
           </div>
 
     <div class="bg-primary" data-aos="fade">
